move url-panel overflow fix to its own file
This lets other themes inherit it.

--- a/style/default/hints--url-panel.css
+++ b/style/default/hints--url-panel.css
@@ -14,6 +14,3 @@
   font-weight: bold;
 }
 
-.url-panel-value {
-  -moz-box-flex: 1;
-}
